force-app/main/default/objects/VG_Attachment__c/fields/VG_Account__c.field-meta.xml
<CustomField>
    <fullName>VG_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>