force-app/main/default/objects/VG_Attachment__c/fields/VG_Asset__c.field-meta.xml
<CustomField>
    <fullName>VG_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>