force-app/main/default/objects/VG_Attachment__c/fields/VG_Attachment__c.field-meta.xml
<CustomField>
    <fullName>VG_Attachment__c</fullName>
    <label>Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>