force-app/main/default/objects/VG_Attachment__c/fields/VG_Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assets File</fullName>
                <default>true</default>
                <label>Assets File</label>
            </value>
            <value>
                <fullName>TOBA</fullName>
            </value>
            <value>
                <fullName>Sanctions Search Certificate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>