force-app/main/default/objects/VG_Attachment__c/fields/VG_Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>VG_Attachment_URL__c</fullName>
    <formula>IF(BEGINS(VG_Attachment__c, &quot;00P&quot;), &quot;servlet/servlet.FileDownload?file=&quot;+ VG_Attachment__c, &quot;sfc/servlet.shepherd/version/download/&quot;+VG_Attachment__c)</formula>
    <label>Attachment_URL</label>
    <type>Text</type>
</CustomField>