force-app/main/default/objects/VG_Attachment__c/fields/VG_Description__c.field-meta.xml
<CustomField>
    <fullName>VG_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>