force-app/main/default/objects/VG_Attachment__c/fields/VG_Folder__c.field-meta.xml
<CustomField>
    <fullName>VG_Folder__c</fullName>
    <label>Folder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Policy Documentation</fullName>
                <default>true</default>
                <label>Policy Documentation</label>
            </value>
            <value>
                <fullName>Pricing Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Reinsurance</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>