force-app/main/default/objects/VG_Attachment__c/fields/VG_Policy__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>