force-app/main/default/objects/VG_Attachment__c/fields/VG_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>