force-app/main/default/objects/VG_Attachment__c/fields/VG_Portal_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_Portal_Name__c</fullName>
    <formula>IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Edison&quot;), &quot;/Edison/&quot;, IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Bridge&quot;), &quot;/Bridge/&quot;,IF(CONTAINS($Api.Partner_Server_URL_290, &quot;VFP&quot;), &quot;/VFP/&quot;,IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Horizon&quot;), &quot;/Horizon/&quot;,
IF(CONTAINS($Api.Partner_Server_URL_290, &quot;LS&quot;), &quot;/LS/&quot;, IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Aesir&quot;), &quot;/Aesir/&quot;, IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Imara&quot;), &quot;/Imara/&quot;,IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Gentium&quot;), &quot;/Gentium/&quot;,IF(CONTAINS($Api.Partner_Server_URL_290, &quot;umr&quot;), &quot;/umr/&quot;, &quot;None&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Name</label>
    <type>Text</type>
</CustomField>