force-app/main/default/objects/VG_Attachment__c/fields/View_Attachment__c.field-meta.xml
<CustomField>
    <fullName>View_Attachment__c</fullName>
    <formula>IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Edison&quot;), HYPERLINK(&quot;/Edison/servlet/servlet.FileDownload?file=&quot;+ VG_Attachment__c , &quot;View Attachment&quot;), IF(CONTAINS($Api.Partner_Server_URL_290, &quot;Bridge&quot;), HYPERLINK(&quot;/Bridge/servlet/servlet.FileDownload?file=&quot;+ VG_Attachment__c , &quot;View Attachment&quot;),
IF(CONTAINS($Api.Partner_Server_URL_290, &quot;LS&quot;), HYPERLINK(&quot;/LS/servlet/servlet.FileDownload?file=&quot;+ VG_Attachment__c , &quot;View Attachment&quot;), &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>