force-app/main/default/objects/VG_Attachment__c/recordTypes/Edison_Motor.recordType-meta.xml
<RecordType>
    <fullName>Edison_Motor</fullName>
    <active>true</active>
    <label>Edison Motor</label>
</RecordType>