force-app/main/default/objects/VG_Attachment__c/recordTypes/VCL.recordType-meta.xml
<RecordType>
    <fullName>VCL</fullName>
    <active>true</active>
    <label>VCL</label>
</RecordType>