force-app/main/default/objects/VG_Attachment__c/recordTypes/VG_Account.recordType-meta.xml
<RecordType>
    <fullName>VG_Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>