force-app/main/default/objects/VG_Attachment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>VG_Attachment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>View_Attachment__c</columns>
    <columns>VG_Policy_Schedule__c</columns>
    <columns>VG_Policy__c</columns>
    <columns>VG_Folder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>